<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_like" translatable="false">Нравится</string>
    <string name="description_shares" translatable="false">Поделиться</string>
    <string name="description_views" translatable="false">Просмотрено</string>
    <string name="post_author_avatar" translatable="false">Аватар</string>
    <string name="description_menu" translatable="false">Меню</string>
    <string name="post_menu_remove" translatable="false" tools:ignore="MissingTranslation">Удалить</string>
    <string name="post_input_text" translatable="false" tools:ignore="MissingTranslation">Введите текст</string>
    <string name="empty_post_error" translatable="false" tools:ignore="MissingTranslation">Пост не содержит текст</string>
    <string name="menu_edit" tools:ignore="MissingTranslation" translatable="false">Изменить</string>
    <string name="edit_message" tools:ignore="MissingTranslation" translatable="false">Изменить сообщение</string>
    <string name="description_cancel" tools:ignore="MissingTranslation" translatable="false">Отмена</string>
    <string name="description_bottom_line_edit" tools:ignore="MissingTranslation" translatable="false">Кнопка</string>
    <string name="empry_content_error" translatable="false">Нет текста</string>
    <string name="chooser_share_post" translatable="false">Выберите приложение</string>
    <string name="close_edit_post" translatable="false">Закрыть изменяемый пост</string>
    <string name="save_new_post" translatable="false">Сохранить новый пост</string>
</resources>