<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing_large">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing_medium"
        android:contentDescription="@string/post_author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_netology_foreground" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:layout_marginEnd="@dimen/common_spacing_medium"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:layout_marginEnd="@dimen/common_spacing_medium"
        android:layout_marginBottom="@dimen/common_spacing_medium"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="@dimen/tap_size"
        android:layout_height="@dimen/tap_size"
        android:contentDescription="@string/description_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:checkable="true"
        app:icon="@drawable/ic_baseline_more_vert_24"
        style="@style/Theme.NMedia.MenuButton"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_medium"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/down_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/Theme.NMedia.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_like"
        app:icon="@drawable/ic_like_checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf='@id/down_barrier'
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shares"
        style="@style/Theme.NMedia.ShareViewedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="@+id/likes"
        android:layout_marginStart="48dp"
        android:checkable="true"
        android:contentDescription="@string/description_shares"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@+id/likes"
        app:layout_constraintStart_toEndOf="@+id/likes"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        tools:text="15" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:checkable="false"
        android:contentDescription="@string/description_views"
        android:text="15"
        app:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="@+id/shares"
        app:layout_constraintStart_toEndOf="@+id/shares"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        style="@style/Theme.NMedia.ShareViewedButton"
        tools:text="15" />


</androidx.constraintlayout.widget.ConstraintLayout>