<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/card_post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        android:orientation="horizontal"
        app:constraint_referenced_ids="content,save"/>


    <EditText
        android:inputType="textMultiLine"
        android:hint="@string/post_input_text"
        android:importantForAutofill="no"
        android:id="@+id/content"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        app:layout_constraintTop_toTopOf="@+id/content"
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/common_spacing_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_send_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/edit_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_large"
        android:orientation="horizontal"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="edit_message, bottom_line_edit,content_check,cancel, edit_message_drow"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_barrier" />

    <TextView
        android:id="@+id/edit_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:paddingStart="@dimen/common_spacing_medium"
        android:paddingTop="@dimen/common_spacing_medium"
        android:text="@string/edit_message"
        android:textColor="@color/blue"
        android:textSize="@dimen/edit_text_size"
        app:layout_constraintBottom_toTopOf="@id/content_check"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/edit_message_drow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing_medium"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_message"
        app:layout_constraintTop_toTopOf="@+id/edit_message"
        app:layout_constraintEnd_toStartOf="@+id/edit_message"/>

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_cancel"
        android:padding="@dimen/common_spacing_medium"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/content_check"
        android:layout_width="369dp"
        android:layout_height="32dp"
        android:layout_marginBottom="667dp"
        android:ellipsize="end"
        android:paddingStart="@dimen/common_spacing_medium"
        android:paddingBottom="@dimen/common_spacing_medium"
        android:singleLine="true"
        android:textSize="@dimen/edit_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/list"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_message"
        tools:ignore="RtlSymmetry"
        tools:text="message" />

    <ImageView
        android:id="@+id/bottom_line_edit"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_bottom_line_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
